--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>my-app</title>
+    <link rel="icon" href="static/logo.png" type="image/x-icon"/>
+    <title>管理后台</title>
   </head>
   <body>
     <div id="app"></div>
